# llm_lb

./: .gitignore  CONTRIBUTING.md  README.md  claude.md  prompts.json
.claude/: settings.json
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
data/: feed.xml  index.json
docs/: METRICS.md  WALKTHROUGH.md  istok_tasks.md  writing_eval_deprecation_20260424.md
models/: deepseek-v3.2-lite@vllm.yaml  deepseek32exp@vllm.yaml  dummy@local.yaml  gemma-3-12b-it@vllm.yaml  gemma-4-31b-it@vllm.yaml  gemma-4-31b@vllm.yaml  glm5-awq@vllm.yaml  glm5.1@llama.yaml  glm5.1@vllm.yaml  gpt-4o-mini@openai.yaml  gpt-oss-120b@vllm.yaml  judge@openai.yaml  llama-4-scout@vllm.yaml  llama-guard4@vllm.yaml  minimax_m2.7@vllm.yaml  mistral-small-3.1@vllm.yaml  mistral-small-4@vllm.yaml  nemotron-3-super@vllm.yaml  qwen3-235B-A22B@vllm.yaml  qwen3-30b@vllm.yaml  qwen3.5-27b@vllm.yaml  qwen3.5-397b@vllm.yaml  qwen3.6-35b@vllm.yaml
runner/: pyproject.toml
runner/data/: feed.xml  index.json
runner/src/llm_lb/: aggregate.py  cli.py  feed.py  models.py  runner.py  validate.py
runner/src/llm_lb/adapters/: __init__.py  base.py  dummy.py  hf.py  llama_guard.py  openai.py  openai_compat.py  openai_like.py
runner/src/llm_lb/eval/: extract.py  judge.py  metrics.py
runner/src/llm_lb/eval/dialog_sim/: __init__.py  retail_data_model.py  retail_schemas.py  retail_tools.py  simulator.py
runner/tests/: test_adapters.py  test_extract.py  test_judge.py  test_metrics.py  test_models.py  test_runner_dummy.py
schemas/: README.md  leaderboard.schema.json  model.schema.json  (+3 more)
(+2310 files in other folders)
